--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kaushik Agastyaraju: Personal site and portfolio</title>
     <h1>Kaushik Agastyaraju</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos porro tempore praesentium reiciendis explicabo voluptatum maxime hic ullam repellat, itaque dolor veniam. Velit quas inventore debitis vel tenetur a praesentium.</p>
+    <img scr = babypic.jpg alt = "this is a picture of me as a baby, I like this picture because although someone is taking a picture of me i'm holding the camera so it looks like I took a selfie"> 
 </head>
 <body>
     
