--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaushik Agastyaraju: Personal site and portfolio</title>
-    <h1>Kaushik Agastyaraju</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos porro tempore praesentium reiciendis explicabo voluptatum maxime hic ullam repellat, itaque dolor veniam. Velit quas inventore debitis vel tenetur a praesentium.</p>
-    <img scr = babypic.jpg alt = "this is a picture of me as a baby, I like this picture because although someone is taking a picture of me i'm holding the camera so it looks like I took a selfie"> 
+    <link rel="stylesheet" href="style.css">
+    <title>Kaushik Agastyaraju: Personal Site and Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Kaushik Agastyaraju</h1>
+        <p>Hi, my name is Kaushik Agastyaraju. I am originally from Ventura County near the Los Angeles area. I am currently pursuing a major in Data Science at UC San Diego.</p>
+        <img src="images/babypic.jpg" width="300" height="200" alt="This is a picture of me as a baby. Although someone is taking a picture of me, I'm holding the camera so it looks like I took a selfie.">
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="resume.html">CV</a></li>
+            <li><a href="https://github.com/kagastyaraju" target="_blank">GitHub</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <p></p>
+    </main>
 </body>
 </html>
