--- a/contact/index.html
+++ b/contact/index.html
@@ -10,14 +10,15 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../projects/index.html">Projects</a></li>
-            <li><a href="index.html">Contact</a></li>
-            <li><a href="https://github.com/YOUR_USERNAME" target="_blank">GitHub</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="contact/index.html">Contact</a></li>
+            <li><a href="resume.html">CV</a></li>
+            <li><a href="https://github.com/kagastyaraju" target="_blank">GitHub</a></li>
         </ul>
     </nav>
     
-    <form action="mailto:YOUR_EMAIL_ADDRESS" method="POST" enctype="text/plain">
+    <form action="mailto:kagastyaraju@ucsd.edu" method="POST" enctype="text/plain">
         <!-- Sender's Email -->
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required>
