--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <form> </form>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,33 +9,28 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects/index.html">Projects</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../projects/index.html">Projects</a></li>
+            <li><a href="index.html" class="current">Contact</a></li>
+            <li><a href="../resume.html">Resume</a></li>
             <li><a href="https://github.com/kagastyaraju" target="_blank">GitHub</a></li>
         </ul>
     </nav>
-    
+
+    <h1>Contact Page</h1>
+    <p>Please fill out the form below to contact </p>
+
     <form action="mailto:kagastyaraju@ucsd.edu" method="POST" enctype="text/plain">
-        <!-- Sender's Email -->
         <label for="email">Your Email:</label>
         <input type="email" id="email" name="email" required>
-        <br><br>
 
-        <!-- Subject -->
         <label for="subject">Subject:</label>
         <input type="text" id="subject" name="subject" required>
-        <br><br>
 
-        <!-- Message Body -->
         <label for="body">Message:</label>
         <textarea id="body" name="body" rows="5" required></textarea>
-        <br><br>
 
-        <!-- Submit Button -->
-        <button>Send Message</button>
+        <button type="submit">Send Message</button>
     </form>
-
 </body>
 </html>
