--- a/contact/index.html
+++ b/contact/index.html
@@ -18,7 +18,7 @@
     </nav>
 
     <h1>Contact Page</h1>
-    <p>Please fill out the form below to contact </p>
+    <p>Please fill out the form below to contact</p>
 
     <form action="mailto:kagastyaraju@ucsd.edu" method="POST" enctype="text/plain">
         <label for="email">Your Email:</label>
@@ -32,5 +32,8 @@
 
         <button type="submit">Send Message</button>
     </form>
+
+    <!-- Correct path to the global.js file -->
+    <script src="../global.js" type="module"></script>
 </body>
 </html>
