--- a/resume.html
+++ b/resume.html
@@ -96,5 +96,9 @@
             <li>Leadership, Time Management, Communication</li>
         </ul>
     </section>
+
+    <!-- Correct path to the JavaScript file -->
+    <script src="global.js" type="module"></script>
 </body>
 </html>
+
