--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,5 +29,8 @@
     <main>
         <p></p>
     </main>
+
+    <script src="global.js" type="module"></script>
+
 </body>
 </html>
