--- a/projects/index.html
+++ b/projects/index.html
@@ -80,5 +80,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </article>
     </div>
+    <script src="../global.js" type="module"></script>
+
 </body>
 </html>
