--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +8,7 @@
 </head>
 
 
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects/index.html">Projects</a></li>
-        <li><a href="contact/index.html">Contact</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="https://github.com/kagastyaraju" target="_blank">GitHub</a></li>
-    </ul>
-</nav>
+
 
 
 <body>
