--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
         </ul>
     </section>
 
-    <script src="global.js" type="module"></script>
+    <script src="../global.js" type="module"></script>
 </body>
 </html>
 
