--- a/index.html
+++ b/index.html
@@ -24,5 +24,14 @@
 
     <script src="global.js" type="module"></script>
 
+    <h2>Latest Projects</h2>
+    <div class="projects"></div>
+    <script src="index.js" type="module"></script>  
+
+    <div id="profile-stats">
+        <h3>GitHub Stats</h3>
+      </div>
+
 </body>
 </html>
+
