--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <title>Kaushik Agastyaraju: Personal Site and Portfolio</title>
 </head>
 
-
-
-
-
 <body>
     <header>
         <h1>Kaushik Agastyaraju</h1>
@@ -26,7 +22,7 @@
 
     <h2>Latest Projects</h2>
     <div class="projects"></div>
-    <script src="index.js" type="module"></script>  
+    <script src="index.js" type="module" defer></script>  
 
     <div id="profile-stats">
         <h3>GitHub Stats</h3>
