--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
     <div class="projects"></div>
     <script src="index.js" type="module" defer></script>  
 
-    <div id="profile-stats">
-        <h3>GitHub Stats</h3>
-      </div>
+    <!-- Inside <body> -->
+<div id="profile-stats">
+    <h3>GitHub Stats</h3>
+    <div class="stats-grid">
+      <!-- JavaScript will populate this -->
+    </div>
+  </div>
 
 </body>
 </html>
