--- a/projects/index.html
+++ b/projects/index.html
@@ -7,72 +7,13 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    
-
-    <h1>My Projects</h1>
+    <h1 class="projects-title">My Projects</h1>
     <div class="projects">
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-        <article>
-            <h2>Lorem Ipsum Heading</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
+        <!-- Projects will be dynamically inserted here by JavaScript -->
     </div>
-    <script src="../global.js" type="module"></script>
 
+    <!-- Add both scripts -->
+    <script src="../global.js" type="module"></script>
+    <script src="projects.js" type="module"></script>
 </body>
 </html>
