--- a/projects/index.html
+++ b/projects/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects</title>
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-    <h1 class="projects-title">My Projects</h1>
-    <div class="projects">
-        <!-- Projects will be dynamically inserted here by JavaScript -->
-    </div>
+  <h1 class="projects-title">My Projects</h1>
+  <div class="projects">
+    <!-- Projects will be dynamically inserted here by JavaScript -->
+  </div>
 
-    <!-- Add both scripts -->
-    <script src="../global.js" type="module"></script>
-    <script src="projects.js" type="module"></script>
+  <!-- Load global.js first -->
+  <script src="../global.js" type="module"></script>
+  <script src="projects.js" type="module"></script>
 </body>
 </html>
