--- a/projects/index.html
+++ b/projects/index.html
@@ -1,3 +1,4 @@
+<!-- In projects/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,6 @@
   <h1 class="projects-title">My Projects</h1>
 
   <div class="viz-container">
-    <!-- Changed to use ID instead of class -->
     <input type="search" 
            id="search-input"
            placeholder="🔍 Search projects..."
@@ -26,7 +26,6 @@
     <!-- Projects will be dynamically inserted here by JavaScript -->
   </div>
 
-  <!-- Scripts MUST be at the BOTTOM -->
   <script src="../global.js" type="module"></script>
   <script src="projects.js" type="module"></script>
 </body>
