--- a/meta/index.html
+++ b/meta/index.html
@@ -9,6 +9,8 @@
     <h1>Codebase Statistics</h1>
     <div id="stats"></div>
     <div id="chart"></div>
+    <!-- Load global.js to build the navigation -->
+    <script src="../global.js" type="module"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="main.js" type="module"></script>
 </body>
